changes to cifar-100

--- a/jupyter_notebooks/FMP_CIFAR100/FMP_CIFAR100.ipynb
+++ b/jupyter_notebooks/FMP_CIFAR100/FMP_CIFAR100.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "import tensorflow as tf \n",
     "from my_layers import cifar_fmp\n",
-    "from fmp_training import is_training \n",
     "from fmp_reader import model_train"
    ]
   },
@@ -18,7 +19,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -29,31 +32,37 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "X = tf.placeholder(tf.float32,[None, 94, 94, 3])\n",
-    "Y = tf.placeholder(tf.float32,[None,1])"
+    "Y = tf.placeholder(tf.float32,[None,100])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "train_dir = [\"/Users/PrakashR/Downloads/prakash/experiments/cifar100/cifar-100-binary/train.bin\"]\n",
-    "test_dir = [\"/Users/PrakashR/Downloads/prakash/experiments/cifar100/cifar-100-binary/test.bin\"]"
+    "train_dir = [\"/home/prakash/Downloads/bench_marking_fmp/cifar-100-python/train\"]\n",
+    "test_dir = [\"/home/prakash/Downloads/bench_marking_fmp/cifar-100-python/test\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -62,9 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -86,18 +97,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "accuracy, train_step = is_training(Y,model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -106,13 +108,13 @@
      "output_type": "stream",
      "text": [
       "[queue runners started]\n",
-      "[Training has initiated]\n",
-      "ALL Working Fine\n"
+      "[Training has initiated]\n"
      ]
     }
    ],
    "source": [
-    "model_train(X, Y, train_dir, test_dir, train_step, accuracy, batch_size = 32, num_epochs=10, summary_dir = summary_dir)"
+    "model_train(model, X, Y, train_dir, test_dir, batch_size = 32, num_epochs=200, \\\n",
+    "            save_path=\"/tensorflow/cifar\", summary_dir = summary_dir)"
    ]
   },
   {
