NaN value bugs to be identified

--- a/BenchMarking_Optimizers/01_tensorflow.ipynb
+++ b/BenchMarking_Optimizers/01_tensorflow.ipynb
@@ -20,14 +20,16 @@
    "source": [
     "from keras.datasets import mnist\n",
     "import pandas as pd\n",
-    "import numpy as np "
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -56,7 +58,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -68,7 +72,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -90,7 +96,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -102,7 +110,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -115,410 +125,82 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "M.optimize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.0326667\n",
-      "Accuracy: 0.769333\n",
-      "Accuracy: 0.85\n",
-      "Accuracy: 0.881333\n",
-      "Accuracy: 0.900333\n",
-      "Accuracy: 0.916333\n",
-      "Accuracy: 0.922333\n",
-      "Accuracy: 0.929\n",
-      "Accuracy: 0.930333\n",
-      "Accuracy: 0.937\n",
-      "Accuracy: 0.940667\n",
-      "Accuracy: 0.938667\n",
-      "Accuracy: 0.945667\n",
-      "Accuracy: 0.941667\n",
-      "Accuracy: 0.945\n",
-      "Accuracy: 0.950667\n",
-      "Accuracy: 0.954667\n",
-      "Accuracy: 0.954667\n",
-      "Accuracy: 0.953667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "Accuracy: 0.946667\n",
-      "[The Algorithm is optimized]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[None, 10]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "M.train()"
+    "M.model.get_shape().as_list()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "M.optimize(optimizer = \"adam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.112 Error: 3.46585\n",
+      "Accuracy: 0.6743 Error: 1.33293\n",
+      "Accuracy: 0.8066 Error: 0.716101\n",
+      "Accuracy: 0.8494 Error: 0.59809\n",
+      "Accuracy: 0.8552 Error: 0.552549\n",
+      "Accuracy: 0.8772 Error: 0.619006\n",
+      "Accuracy: 0.8857 Error: 0.375396\n",
+      "Accuracy: 0.8904 Error: 0.32238\n",
+      "Accuracy: 0.8973 Error: 0.296186\n",
+      "Accuracy: 0.8997 Error: 0.271196\n",
+      "Accuracy: 0.9008 Error: 0.481224\n",
+      "Accuracy: 0.9048 Error: 0.294316\n",
+      "Accuracy: 0.9045 Error: 0.231884\n",
+      "Accuracy: 0.9031 Error: 0.430867\n",
+      "Accuracy: 0.9076 Error: 0.374733\n",
+      "Accuracy: 0.913 Error: 0.210103\n",
+      "Accuracy: 0.9081 Error: 0.390648\n",
+      "Accuracy: 0.9116 Error: 0.199115\n",
+      "Accuracy: 0.9158 Error: 0.334712\n",
+      "Accuracy: 0.9032 Error: nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "M.train(summary_dir=\"/tmp/tensorflowlogs/adam\", save_path=\"/tmp/model_adam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
